--- a/department-service.properties
+++ b/department-service.properties
@@ -12,3 +12,9 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.show-sql=true
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+#rabbitmq properties
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=quest
+spring.rabbitmq.password=quest
