--- a/employee-service.properties
+++ b/employee-service.properties
@@ -13,3 +13,9 @@ spring.jackson.serialization.fail-on-empty-beans=false
 
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+#rabbitmq properties
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=quest
+spring.rabbitmq.password=quest
