--- a/employee-service.properties
+++ b/employee-service.properties
@@ -19,3 +19,6 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=quest
 spring.rabbitmq.password=quest
+
+#greeting value for testing @RefreshScope
+greeting.message="welcome to employee service"
