--- a/employee-service.properties
+++ b/employee-service.properties
@@ -21,4 +21,4 @@ spring.rabbitmq.username=quest
 spring.rabbitmq.password=quest
 
 #greeting value for testing @RefreshScope
-greeting.message="welcome to employee service updated for testing"
+greeting.message="welcome to employee service "
