--- a/department-service.properties
+++ b/department-service.properties
@@ -18,3 +18,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=quest
 spring.rabbitmq.password=quest
+
+spring.random.message="Random message"
