--- a/department-service.properties
+++ b/department-service.properties
@@ -16,7 +16,7 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 #rabbitmq properties
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=quest
-spring.rabbitmq.password=quest
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 spring.random.message="Random message"
