--- a/employee-service.properties
+++ b/employee-service.properties
@@ -17,8 +17,8 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 #rabbitmq properties
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=quest
-spring.rabbitmq.password=quest
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 #greeting value for testing @RefreshScope
 greeting.message="welcome to employee service final update "
