--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,5 +1,5 @@
 server.port = 8081
-spring.datasource.url= jdbc:postgresql://localhost:5432/employee_service
+spring.datasource.url= jdbc:postgresql://postgres-container:5432/employee_service
 spring.datasource.username= postgres
 spring.datasource.password= admin
 
