--- a/department-service.properties
+++ b/department-service.properties
@@ -1,5 +1,5 @@
 server.port = 8083
-spring.datasource.url= jdbc:postgresql://localhost:5432/department_service
+spring.datasource.url= jdbc:postgresql://postgres-container:5432/department_service
 spring.datasource.username= postgres
 spring.datasource.password= admin
 
