--- a/organization-service.properties
+++ b/organization-service.properties
@@ -1,7 +1,7 @@
 server.port=8084
 spring.application.name=ORGENIZATION-SERVICE
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/orgenization_service
+spring.datasource.url=jdbc:postgresql://postgres-container:5432/orgenization_service
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
