--- a/department-service.properties
+++ b/department-service.properties
@@ -1,5 +1,5 @@
 server.port = 8083
-spring.datasource.url= jdbc:postgresql://postgres-container:5432/department_service
+spring.datasource.url= jdbc:postgresql://postgresdb:5432/department_service
 spring.datasource.username= postgres
 spring.datasource.password= admin
 
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.show-sql=true
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.client.serverUrl.defaultZone=http://serviceregistry:8761/eureka/
 
 #rabbitmq properties
 spring.rabbitmq.host=localhost
