--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,5 +1,5 @@
 server.port = 8081
-spring.datasource.url= jdbc:postgresql://POSTGRESCONTAINER:5432/employee_service
+spring.datasource.url= jdbc:postgresql://postgresdb:5432/employee_service
 spring.datasource.username= postgres
 spring.datasource.password= admin
 
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jackson.serialization.fail-on-empty-beans=false
 
 
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.client.serverUrl.defaultZone=http://serviceregistry:8761/eureka/
 
 #rabbitmq properties
 spring.rabbitmq.host=localhost
