--- a/organization-service.properties
+++ b/organization-service.properties
@@ -1,7 +1,7 @@
 server.port=8084
 spring.application.name=ORGENIZATION-SERVICE
 
-spring.datasource.url=jdbc:postgresql://postgres-container:5432/orgenization_service
+spring.datasource.url=jdbc:postgresql://postgresdb:5432/orgenization_service
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
@@ -12,4 +12,4 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.show-sql=true
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.client.serverUrl.defaultZone=http://serviceregistry:8761/eureka/
