--- a/organization-service.properties
+++ b/organization-service.properties
@@ -12,4 +12,5 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.show-sql=true
-eureka.instance.client.serverUrl.defaultZone=http://serviceregistry:8761/eureka/
+#eureka.instance.client.serverUrl.defaultZone=http://serviceregistry:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://serviceregistry:8761/eureka
