--- a/employee-service.properties
+++ b/employee-service.properties
@@ -12,10 +12,11 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jackson.serialization.fail-on-empty-beans=false
 
 
-eureka.instance.client.serverUrl.defaultZone=http://serviceregistry:8761/eureka/
+#eureka.instance.client.serverUrl.defaultZone=http://serviceregistry:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://serviceregistry:8761/eureka
 
 #rabbitmq properties
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=myrabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
