--- a/department-service.properties
+++ b/department-service.properties
@@ -11,12 +11,13 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.show-sql=true
-eureka.instance.client.serverUrl.defaultZone=http://serviceregistry:8761/eureka/
+#eureka.instance.client.serverUrl.defaultZone=http://serviceregistry:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://serviceregistry:8761/eureka
 
 #rabbitmq properties
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=myrabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-spring.random.message="Random message"
+
